# skc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/skc/: codec.hpp  format.hpp  varint.hpp  zstd_wrapper.hpp
src/: codec.cpp  skcconv.cpp  zstd_wrapper.cpp
test/: main.cpp
